Added spring boot starter actuator & security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+info.app.name=My spring boot App
+info.app.description=My spring boot course
+info.app.version=1.0.0
 
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
+
+spring.security.user.name=admin
+spring.security.user.password=admin
