--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,15 @@ info.app.name=My spring boot App
 info.app.description=My spring boot course
 info.app.version=1.0.0
 
-management.endpoints.web.exposure.include=health,info
-management.info.env.enabled=true
+#spring.security.user.name=admin
+#spring.security.user.password=admin
 
-spring.security.user.name=admin
-spring.security.user.password=admin
+coach.name=Mickey mouse
+coach.team=Mouse club
+
+server.servlet.context-path=/mycoolapp
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
