--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,12 @@ coach.team=Mouse club
 
 server.servlet.context-path=/mycoolapp
 
+#DATABASE
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+#SPRING REST
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=3
